EAEC-66: Correct button event bug

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -130,6 +130,12 @@
 
   .title_cta {
     margin-top: 1.5rem;
+
+    // On mobile, the previous element (empty, height=0, ¿¿??) receives the
+    // click event unless a z-index is set to make the button pop above.
+    position: relative;
+    z-index: 1;
+    
     @include media-breakpoint-up(md) {
       margin-top: 3rem;
     }
