--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -4,6 +4,14 @@ body {
   padding: 0;
   margin: 0;
 }
+
+// Avoid the flashing of wrongly positioned content on first load, where the
+// height calculations are still in process. This will be dynamically removed
+// when the height is processed
+body {
+  visibility: hidden;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
