--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -120,6 +120,8 @@ $round-image-vertical-breakpoint-md: 800px;
 $round-image-vertical-breakpoint-sm: 600px;
 $round-image-vertical-breakpoint-xsm: 400px;
 
+$carousel-min-height: 450px; // Keep this in sync with heightThreshold
+
 $icon-button-size: 64px;
 $icon-button-size--small: 48px;
 
