--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,3 +43,4 @@
 @import "components/_watermark";
 @import "components/_video-quote";
 @import "components/_profile-grid";
+@import "components/_caption";
