--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -158,12 +158,36 @@
   @include media-breakpoint-up(sm) {
     left: 10%;
   }
+  @include media-breakpoint-up(md) {
+    left: 20px;
+  }
+  @include media-breakpoint-between(md, lg) {
+    transform: translateY(0%);
+  }
+  @include media-breakpoint-between(lg, xl) {
+    transform: translateY(60%);
+  }
+  @include media-breakpoint-up(xl) {
+    left: 10%;
+  }
 }
 
 .embla__button--next {
   right: 10px;
 
   @include media-breakpoint-up(sm) {
+    right: 10%;
+  }
+  @include media-breakpoint-up(md) {
+    right: 20px;
+  }
+  @include media-breakpoint-between(md, lg) {
+    transform: translateY(0%);
+  }
+  @include media-breakpoint-between(lg, xl) {
+    transform: translateY(60%);
+  }
+  @include media-breakpoint-up(xl) {
     right: 10%;
   }
 }
