EAEC-92: Fix lighthous warnings

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -57,6 +57,11 @@ footer[role="contentinfo"] {
 
     &__links a {
       display: block;
+      padding: $spacer 0;
+      
+      @include media-breakpoint-up('md') {
+        padding: 0;
+      }
     }
   }
 }
