--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -161,3 +161,12 @@ a {
     display: none;
   }
 }
+
+.visually-hidden {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
