add podium and podcast pages

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -97,6 +97,8 @@ a {
   img {
     display: block;
     transform: scale(1.05);
+    aspect-ratio: 1/1;
+    object-fit: cover;
   }
 
   @include media-breakpoint-up(md) {
