replace episodes with coming soon sections

--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -10,6 +10,19 @@
     z-index: 2;
     transform: translate(-50%, 35%);
   }
+  
+  .round-wp {
+    position: relative;
+
+    .image-overlay {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+  }
 
   .overlay {
     padding: $default-separation;
