fix mobile responsive issues

--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -3,6 +3,12 @@
   display: inline-block;
   margin-bottom: math.div($icon-button-size, 2);
 
+  &--has-link {
+    @include media-breakpoint-down(md) {
+      margin-bottom: math.div($icon-button-size, 2) + 90px !important;
+    }
+  }
+
   .actions {
     position: absolute;
     bottom: 0;
