--- a/styles/components/_component-intro-text.scss
+++ b/styles/components/_component-intro-text.scss
@@ -3,6 +3,10 @@
   position: relative;
   margin-bottom: -80px;
 
+  @include media-breakpoint-down(md) {
+    margin-bottom: 0;
+  }
+
   .background-image {
     position: absolute;
     top: 0;
