--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -7,6 +7,15 @@ footer[role="contentinfo"] {
     padding: 5rem 0;
   }
 
+  & h2 {
+    margin-bottom: 30px;
+    font-size: 64px;
+
+    @include media-breakpoint-down(md) {
+      font-size: 50px;
+    }
+  }
+
   .footer__scrolltop {
     margin-bottom: 5rem;
 
@@ -27,7 +36,7 @@ footer[role="contentinfo"] {
     font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
     font-size: $font-size-xxlg;
-    letter-spacing: .556rem;
+    letter-spacing: 0.556rem;
     text-transform: uppercase;
     margin-bottom: 1.5rem;
   }
@@ -58,8 +67,8 @@ footer[role="contentinfo"] {
     &__links a {
       display: block;
       padding: $spacer 0;
-      
-      @include media-breakpoint-up('md') {
+
+      @include media-breakpoint-up("md") {
         padding: 0;
       }
     }
