--- a/styles/components/_teaser.scss
+++ b/styles/components/_teaser.scss
@@ -13,6 +13,13 @@
     margin-bottom: 40px;
   }
 
+  .teaser__image_carousel {
+    width: 272px;
+    height: 272px;
+    object-fit: cover;
+    margin-bottom: none;
+  }
+
   .teaser__title {
     margin-bottom: 20px;
   }
@@ -20,5 +27,12 @@
   .teaser__link {
     padding-bottom: 2px;
     border-bottom: 1px solid $color_black;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .teaser__image_carousel {
+    width: 56vw !important;
+    height: 56vw !important;
   }
 }
