third round of edits

--- a/styles/components/_event.scss
+++ b/styles/components/_event.scss
@@ -86,6 +86,10 @@
   .event-container {
     margin-top: 65px;
 
+    .row .component-media-with-expansion {
+      max-width: 212px;
+    }
+
     .section.text-image-header {
       padding: 0 0 30px 0;
 
