--- a/styles/components/_gallery.scss
+++ b/styles/components/_gallery.scss
@@ -1,6 +1,6 @@
-.section.gallery-carousel {
-  padding: 0;
-}
+// .section.gallery-carousel {
+//   padding: 70px 0 0 0;
+// }
 
 .gallery-carousel .overlay {
   justify-content: center;
@@ -10,11 +10,17 @@
   --slide-spacing: 1rem;
   --slide-size: 100%;
   --slide-height: 53vh;
-  padding: 0px 200px;
+  padding: 0px 400px;
 }
 
 .embla-gallery__viewport {
   overflow: hidden;
+  width: 982px;
+  height: 550px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .embla-gallery__container {
@@ -23,6 +29,7 @@
   height: auto;
   margin-left: calc(var(--slide-spacing) * -1);
   margin-bottom: 20px;
+  // max-height: 550px;
 }
 
 .embla-gallery__slide {
@@ -33,9 +40,7 @@
   top: 0;
   bottom: 0;
   margin: auto;
-  margin-bottom: 0 !important;
-  margin-top: 0 !important;
-  max-height: 650px;
+  // max-height: var(--slide-height);
 }
 
 .embla-gallery__slide__img {
@@ -103,31 +108,6 @@
   align-items: center;
 }
 
-.embla-gallery__dot {
-  width: 3rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  margin-right: 0.75rem;
-  margin-left: 0.75rem;
-}
-
-.embla-gallery__dot:after {
-  background: var(--background-site);
-  border-radius: 0.2rem;
-  width: 100%;
-  height: 0.3rem;
-  content: "";
-}
-
-.embla-gallery__dot--selected:after {
-  background: linear-gradient(
-    45deg,
-    var(--brand-primary),
-    var(--brand-secondary)
-  );
-}
-
 .embla-gallery__button {
   z-index: 1;
   color: var(--background-site);
@@ -167,9 +147,13 @@
 
 .embla-gallery-thumbs__viewport {
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 982px;
 }
 
 .embla-gallery-thumbs__container {
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
   margin-left: calc(var(--thumbs-slide-spacing) * -1);
@@ -229,25 +213,6 @@
   pointer-events: none;
 }
 
-.embla-gallery-thumbs__slide__number > span {
-  color: var(--brand-primary);
-  background-image: linear-gradient(
-    45deg,
-    var(--brand-primary),
-    var(--brand-secondary)
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 1.4rem;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .embla__slide h3.event_location {
   font-family: "Pangram";
   font-style: normal;
@@ -268,17 +233,27 @@
   color: #212322;
 }
 
-.embla-gallery__viewport span.slide-num {
+.embla-gallery-thumbs span.slide-num {
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
   padding-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 @include media-breakpoint-down(md) {
   .section.gallery-carousel {
     padding: 0 !important;
+
+    & > h2 {
+      margin-bottom: 40px;
+    }
+
+    .embla__slide {
+      h3.event_location {
+        margin-top: 0px;
+      }
+    }
   }
 
   .gallery-carousel .embla::before {
@@ -293,28 +268,40 @@
     --slide-spacing: 1rem;
     --slide-size: 100%;
     // --slide-height: 53vh;
-    padding: 0;
+    padding-top: 10px;
   }
 
   .embla-gallery__viewport {
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    width: 100vw;
+    max-height: 55vh;
   }
 
   .embla-gallery__container {
     display: flex;
     flex-direction: row;
     height: auto;
-    margin-left: calc(var(--slide-spacing) * -1);
+    // margin-left: calc(var(--slide-spacing) * -1);
+    margin: 0;
+    width: 100vw;
   }
 
   .embla-gallery__slide {
     flex: 0 0 var(--slide-size);
     min-width: 0;
-    padding-left: var(--slide-spacing);
+    padding: 0 0 10px 0;
     position: relative;
-    padding-bottom: 10px;
+    width: 100vw;
+  }
+
+  .embla-gallery__slide__img {
+    display: block;
+    // height: var(--slide-height);
+    max-width: 100vw;
+    height: auto;
+    object-fit: cover;
   }
 
   .embla-gallery__button {
@@ -327,5 +314,6 @@
 
   .embla-gallery-thumbs__viewport {
     padding: 0 50px;
+    width: 100vw;
   }
 }
