--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -231,7 +231,7 @@ body.is-mobile .animate_video {
 .main-container .header-cta {
   margin-top: 30px !important;
   width: auto !important;
-  padding: 8px 15px !important;
+  padding: 12px 30px !important;
   position: static !important;
-  font-size: 12px !important;
+  font-size: 0.8775rem !important;
 }
