--- a/styles/components/_gallery.scss
+++ b/styles/components/_gallery.scss
@@ -47,7 +47,9 @@
   display: block;
   // height: var(--slide-height);
   width: 100%;
-  object-fit: cover;
+  // object-fit: cover;
+  object-fit: contain;
+  height: 550px;
 }
 
 .embla-gallery__slide__number {
