--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -18,17 +18,32 @@ footer[role="contentinfo"] {
 
   .footer__scrolltop {
     margin-bottom: 5rem;
-    position: fixed;
+    // position: fixed;
     bottom: 20px;
     right: 30px;
-    margin: 0;
     z-index: 4;
 
     button {
       margin-bottom: math.div($grid-gutter-width, 2);
+      width: 48px;
+      height: 48px;
 
-      &[aria-label="Contact us"] svg {
-        width: 22px;
+      // &[aria-label="Contact us"] svg {
+      //   width: 22px;
+      // }
+
+      &.fixed {
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        margin-bottom: 0;
+      }
+
+      svg {
+        width: 18px;
+        height: 18.75px;
+        top: 2.63px;
+        left: 2.63px;
       }
     }
 
@@ -39,10 +54,12 @@ footer[role="contentinfo"] {
       margin: 0;
       z-index: 4;
 
-      @include media-breakpoint-down(md) {
-        button[aria-label="Back to top"],
-        span.back-to-top {
-          display: none;
+      button {
+        margin-bottom: 10px;
+
+        &[aria-label="Contact us"] {
+          margin-bottom: 22px;
+          position: static;
         }
       }
     }
