--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -87,7 +87,7 @@
   -webkit-touch-callout: none;
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
-  // will-change: transform;
+  will-change: transform;
   transition: all $main-carousel-transition-duration ease-in-out;
 
   .no_selected {
