fix header slides (show other circles/pages beside current circle/page)

--- a/styles/components/_gallery.scss
+++ b/styles/components/_gallery.scss
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.gallery-carousel .embla__container {
+  will-change: auto !important;
+}
+
 .embla-gallery {
   --slide-spacing: 1rem;
   --slide-size: 100%;
