--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -100,6 +100,7 @@ footer[role="contentinfo"] {
     &__links a {
       display: block;
       padding: $spacer 0;
+      text-decoration: none;
 
       @include media-breakpoint-up("md") {
         padding: 0;
